--- a/src/content/docs/writeups/clamav.mdx
+++ b/src/content/docs/writeups/clamav.mdx
@@ -11,14 +11,15 @@ tags: ["priv-esc", "gobuster", "ssh", "persistence", "burpsuite", "directory-tra
 Scope:
 192.168.115.42
 ```
-# Recon
+## Recon
 
-## Nmap
+### Nmap
 
 ```bash
 sudo nmap -sC -sV -oN nmap  192.168.115.42 -T5 -vvvv --min-rate=5000 -sT
 
-PORT    STATE SERVICE     REASON  VERSION                                        22/tcp  open  ssh         syn-ack OpenSSH 3.8.1p1 Debian 8.sarge.6 (protocol 2.0)
+PORT    STATE SERVICE     REASON  VERSION                                        
+22/tcp  open  ssh         syn-ack OpenSSH 3.8.1p1 Debian 8.sarge.6 (protocol 2.0)
 25/tcp  open  smtp        syn-ack Sendmail 8.13.4/8.13.4/Debian-3sarge3     
 80/tcp  open  http        syn-ack Apache httpd 1.3.33 ((Debian GNU/Linux))
 | http-methods: 
@@ -47,9 +48,9 @@ I reran the nmap scan with all ports and found an unusual high number port:
 So for now we have a **SMB** server and an **Apache** webserver. I'll check port 80 first.
 
 
-# Initial Foothold
+## Initial Foothold
 
-## 80/TCP - HTTP
+### 80/TCP - HTTP
 
 Going to the site I found nothing of interest:
 
@@ -63,7 +64,7 @@ I converted the binary to text:
 
 Understood, time to pwn it then.
 
-## 199/TCP - SNMP 
+### 199/TCP - SNMP 
 
 I went ahead and enumerated this port using `snmp-check`:
 
