--- a/src/content/docs/writeups/cockpit.mdx
+++ b/src/content/docs/writeups/cockpit.mdx
@@ -1,7 +1,7 @@
 ---
 layout: /src/layouts/PostLayout.astro
 title: Cockpit
-tags: ["priv-esc", "gobuster", "ssh", "persistence", "burpsuite", "directory-traversal"]
+tags: ["SQLi", "wildcard"]
 ---
 
 **Start 08:05 31-01-2025**
@@ -11,9 +11,9 @@ tags: ["priv-esc", "gobuster", "ssh", "persistence", "burpsuite", "directory-tra
 Scope:
 192.168.134.10
 ```
-# Recon
+## Recon
 
-## Nmap
+### Nmap
 
 ```bash
 sudo nmap -sC -sV -vvvv --min-rate=5000 -sT -T5 -p- 192.168.134.10  -Pn
@@ -32,7 +32,7 @@ PORT     STATE SERVICE REASON  VERSION
 ```
 
 
-## Feroxbuster
+### Feroxbuster
 
 Port `80` gives the following output.
 
@@ -42,18 +42,18 @@ port `9090` however gave an immense output.
 
 ![](../../../assets/2e64710e843deebdb7109585c991cb48.png)
 
->[!important]
+:::important
 Since I got stuck here I went ahead and ran `gobuster` for good measure to try and see if I missed something.
+:::
 
-
-## Gobuster
+### Gobuster
 
 ![](../../../assets/a8c1acfd9c38679f821dc1c954032e59.png)
 
 Feroxbuster completely missed this! Let's check it out.
 
 
-# 80/TCP - HTTP
+### 80/TCP - HTTP
 
 ![](../../../assets/8e87a486c941ddf1763c8d16c054d60b.png)
 
@@ -67,8 +67,9 @@ Perhaps **SQLi**?
 
 Yup, let's do some SQLi testing.
 
->[!note]
+:::note
 It looks like we're dealing with a **MySQL** server. I will be referencing the [following site](https://github.com/swisskyrepo/PayloadsAllTheThings/blob/master/SQL%20Injection/MySQL%20Injection.md) 
+:::
 
 After some tries I get the following:
 
@@ -77,7 +78,7 @@ After some tries I get the following:
 Not to worry as the site still works.
 
 
-## SQLi 
+### SQLi 
 
 I fire up burp to start testing the injections:
 
@@ -89,8 +90,9 @@ Let's start modifying it.
 'OR '' = '
 ```
 
->[!info]
+:::note
 Found it in [this resource](https://github.com/danielmiessler/SecLists/blob/master/Fuzzing/Databases/MySQL-SQLi-Login-Bypass.fuzzdb.txt?source=post_page-----7e777892e485--------------------------------):![](../../../assets/ec8e8560e7e9a1eb84a7ce093b080b0e.png)
+:::
 
 ![](../../../assets/5553a42fc5938345f89c788b69abc8d9.png)
 
@@ -113,7 +115,7 @@ thisscanttbetouchedd@455152
 Returning back to port `9090` I was able to log in using *james*'s creds.
 
 
-# 9090/TCP - HTTP
+### 9090/TCP - HTTP
 
 ![](../../../assets/dcdc1ae91e49110153fd9ccd6b67a7ec.png)
 
@@ -128,14 +130,14 @@ In the **Host > Accounts > james** section I found a spot where I could upload *
 ![](../../../assets/7f1b025cb892fff2a2275a3eb9bf8f48.png)
 
 
-# Foothold
+## Foothold
 
 Let's try to log in via SSH.
 
 ![](../../../assets/0c7972dab8042472706772012edcc10e.png)
 
 
-## local.txt
+### local.txt
 
 ![](../../../assets/443a28514dca2cce40fcab2f30cab1e2.png)
 
@@ -144,10 +146,8 @@ Let's try to log in via SSH.
 
 ![](../../../assets/a1019824ea9f37a647e7b80a3ee7cfc6.png)
 
-We find the `tar *` wildcard again. From [[OSCP C#Tar Wildcard]] we learned how to do it, so we will try and abuse it in the same way.
 
-
-# Privilege Escalation
+## Privilege Escalation
 
 Using the wildcard trick we get a `root` shell easily.
 
@@ -171,5 +171,3 @@ sudo tar -czvf /tmp/backup.tar.gz *
 **Finished 09:02 31-01-2025**
 
 [^Links]: [[OSCP Prep]]
-
-#SQLi #wildcard 
